--- a/public/index.html
+++ b/public/index.html
@@ -38,20 +38,14 @@
         </button>
         <div class="  collapse navbar-collapse  " id="navbarNav">
           <ul class="navbar-nav text">
-
             <li class="nav-item ">
               <a class="nav-link text-white" id="boton" href="recetas.html">Recetas</a>
             </li>
-            <!-- <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Reproductor de Música</a>
-                    </li> -->
-
           </ul>
-
           <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
           </ul>
-
           <button class="btn-cssbuttons">
+            
             <span>Sobre mi</span><span>
               <svg height="18" width="18" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 1024 1024"
                 class="icon">
@@ -60,6 +54,7 @@
                 </path>
               </svg>
             </span>
+
             <ul>
               <li>
                 <a href="https://github.com/GnesisVSS">
@@ -70,6 +65,7 @@
                   </svg>
                 </a>
               </li>
+
               <li>
                 <a href="https://www.linkedin.com/in/genesis-saez-soto/">
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
@@ -79,8 +75,9 @@
                   </svg>
                 </a>
               </li>
+
               <li>
-                <a href="files/Curriculum-Genesis_Saez.pdf">
+                <a href="files/CV_Genesis_Saez.pdf">
                   <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
                     class="bi bi-file-earmark-arrow-down icon" viewBox="0 0 16 16">
                     <path
@@ -90,23 +87,18 @@
                   </svg></a>
               </li>
             </ul>
+
           </button>
-
-
         </div>
-
       </div>
-
     </nav>
     <!-- FIN DEL NAVBAR -->
-
 
     <!-- CONTENIDO DE LA PÁGINA -->
     <section>
       <div style="background-color: #484554;">
         <div class="container col-sm-8 py-5 mx-auto">
           <div class="row align-items-center py-2">
-
             <div class="col text-white">
               <h1 class="text-focus-in">Hola mundo! Soy Genesis, Ingeniera en Informática y Desarrolladora
                 Frontend!</h1>
@@ -116,9 +108,8 @@
             </div>
           </div>
         </div>
-
-
       </div>
+
       <div class="juegos container-fluid" style="background-color: #ADA9BB; padding-top: 52px; padding-bottom: 52px;">
         <div class="container col-sm-8  mx-auto ">
         </div>
@@ -132,9 +123,9 @@
           </button>
         </div>
       </div>
+
     </section>
   </div>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
