--- a/public/recetas.html
+++ b/public/recetas.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +16,6 @@
     <link rel="shortcut icon" href="img/letra-p.png" />
     <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body
     style="background-image: url('img/madera.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size:cover ;">
     <!---------------------------NAVBAR -------------------------------------->
@@ -32,19 +30,11 @@
             </button>
             <div class="  collapse navbar-collapse  " id="navbarNav">
                 <ul class="navbar-nav text">
-
                     <li class="nav-item ">
                         <a class="nav-link black-white" id="boton" href="recetas.html">Recetas</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Reproductor de Música</a>
-                    </li> -->
-
                 </ul>
-
-                <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
-                </ul>
-
+                <ul class="navbar-nav flex-row flex-wrap ms-md-auto"></ul>
                 <button class="btn-cssbuttons">
                     <span>Sobre mi</span><span>
                         <svg height="18" width="18" xmlns="http://www.w3.org/2000/svg" version="1.1"
@@ -64,6 +54,7 @@
                                 </svg>
                             </a>
                         </li>
+
                         <li>
                             <a href="https://www.linkedin.com/in/genesis-saez-soto/">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
@@ -73,8 +64,9 @@
                                 </svg>
                             </a>
                         </li>
+
                         <li>
-                            <a href="files/Curriculum-Genesis_Saez.pdf">
+                            <a href="files/CV_Genesis_Saez.pdf">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="white"
                                     class="bi bi-file-earmark-arrow-down icon" viewBox="0 0 16 16">
                                     <path
@@ -83,101 +75,39 @@
                                         d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5v2z" />
                                 </svg></a>
                         </li>
+
                     </ul>
                 </button>
-
-
             </div>
-
         </div>
-
     </nav>
-
     <!-- CONTENIDO DE LA PÁGINA -->
     <section>
         <div class="container ">
             <div class="row align-items-center py-2">
-
                 <!------------------------------- CARRUSEL ------------------------------------>
-
                 <div class="col-sm-8 text-black py-5" style="padding: 0px;">
-
                     <div class="card p-4"
                         style="width: auto; background-color:rgba(255, 255, 255, 0.548); height: auto;">
+                        
                         <div class="card-body text-black">
                             <h2 class="card-title">Bienvenido(a)!</h2>
                             <p class="card-text" style="font-family: 'Lora', serif;">
                                 Recetas dulces, saladas, saludables, para todos los gustos! Accede a estas y más recetas
                                 creandote una cuenta en en formulario!
                             </p>
-
-
                         </div>
+
                         <img class="rounded" src="img/comida.png" alt="">
-                        <!-- <div id="carouselExampleIndicators" class="carousel slide p-5" data-bs-ride="carousel ">
-
-                            <div class="carousel-indicators">
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                                    class="active" aria-current="true" aria-label="Slide 1"></button>
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                                    aria-label="Slide 2"></button>
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                                    aria-label="Slide 3"></button>
-                            </div>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="img/focaccia-3771454_1280.jpg" class="d-block w-100" alt="..."
-                                        style="height: 386px;">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="img/pasta-1854245_1280.jpg" class="d-block w-100" alt="..."
-                                        style="height: 386px;">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="img/waffle-2596092_1280.jpg" class="d-block w-100 " alt="..."
-                                        style="height: 386px;">
-                                </div>
-                            </div>
-                            <button class="carousel-control-prev" type="button"
-                                data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button"
-                                data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
-                        </div> -->
-
-
-
                     </div>
-
                 </div>
-
                 <!---------------------------- FORMULARIO LOGIN --------------------------------->
                 <div class="col py-5" style="padding: 0px;">
                     <div class="card text-center p-4" style="background-color: #7474746d; height: auto">
                         <h3>Inicia sesión</h3>
                         <div class="card-body">
-                            <!-- <form class="row">
-                                <div class="mb-3">
-                                    <label for="UsuarioLog" class="visually-hidden">Usuario</label>
-                                    <input type="text" class="form-control" id="UsuarioLog" placeholder="Usuario">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="inputPasswordLog" class="visually-hidden">Contraseña</label>
-                                    <input type="password" class="form-control" id="inputPasswordLog"
-                                        placeholder="Contraseña">
-                                </div>
-                                <div class="d-grid gap-2">
-                                    <button type="submit" class="btn btn-outline-dark">Iniciar Sesión</button>
-                                </div>
-
-                            </form> -->
                             <hr>
-                            <label for="basic-url" class="form-label">¿No tienes una cuenta? Registrate aquí</label>
+                            <label for="basic-url" class="form-label">¿No tienes una cuenta? Registrate aquí</label>  
                             <div>
                                 <div id="app">
                                     <v-app>
@@ -188,56 +118,51 @@
                                                         placeholder="Nombre" aria-label="nombre"
                                                         aria-describedby="nombre">
                                                 </div>
+
                                                 <div class="input-group mb-3">
                                                     <input v-model="usuarios.apellido" type="text" class="form-control"
                                                         placeholder="Apellido" aria-label="apellido"
                                                         aria-describedby="apellido">
                                                 </div>
+
                                                 <div class="input-group mb-3">
                                                     <input v-model="usuarios.correo" type="text" class="form-control"
                                                         placeholder="Correo" aria-label="correo"
                                                         aria-describedby="correo">
                                                 </div>
+
                                                 <div class="input-group mb-3">
                                                     <input v-model="usuarios.usuario" type="text" class="form-control"
                                                         placeholder="Nombre de Usuario" aria-label="usuario"
                                                         aria-describedby="usuario">
                                                 </div>
+
                                                 <div class="input-group mb-3">
                                                     <input v-model="usuarios.contrasena" type="password"
                                                         class="form-control" placeholder="Contraseña"
                                                         aria-label="contrasena" aria-describedby="contrasena">
                                                 </div>
+
                                                 <div class="input-group mb-3">
                                                     <input type="password" class="form-control"
                                                         placeholder="Confirme su contraseña"
                                                         aria-label="contrasena_conf" aria-describedby="contrasena_conf">
                                                 </div>
+
                                                 <div class="d-grid gap-2">
                                                     <input @click="guardar()" type="submit" class="btn btn-outline-dark"
                                                         value="Registrarse">
                                                 </div>
-
                                             </form>
                                         </v-main>
                                     </v-app>
                                 </div>
                             </div>
-
-
                         </div>
-
                     </div>
                 </div>
             </div>
-
         </div>
-
-        <!-- <div class="brillo">
-            <div class="card_load"></div>
-            <div class="card_load_extreme_title"></div>
-            <div class="card_load_extreme_descripion"></div>
-        </div> -->
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -253,7 +178,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.js"
         integrity="sha512-nqIFZC8560+CqHgXKez61MI0f9XSTKLkm0zFVm/99Wt0jSTZ7yeeYwbzyl0SGn/s8Mulbdw+ScCG41hmO2+FKw=="
         crossorigin="anonymous"></script>
-
     <script>
         let url = 'http://localhost:3000/api/usuarios/';
         new Vue({
@@ -287,9 +211,23 @@
                 crear: function () {
                     let parametros = { correo: this.usuarios.correo, nombre: this.usuarios.nombre, apellido: this.usuarios.apellido, usuario: this.usuarios.usuario, contrasena: this.usuarios.contrasena };
                     axios.post(url, parametros)
-                        .then(response => {
-                            this.mostrar();
-                        });
+                        .then((response) => {
+                            if (response.data.message === "El usuario ya existe!") {
+                                this.mostrar();
+                                alert("El usuario ya existe!")
+                            } else{
+                                this.mostrar();
+                                alert("Usuario registrado exitosamente")
+                            }
+                            // else {
+                            //     this.mostrar();
+                            //     alert("Usuario creado exitosamente")
+                            // }
+                        })
+                    // .catch(e => {
+                    //     // Capturamos los errores
+                    //     alert("El usuario ya existe!")
+                    // });
                     this.usuarios.correo = "";
                     this.usuarios.nombre = "";
                     this.usuarios.apellido = "";
@@ -300,30 +238,14 @@
                 //Botones y formularios
                 guardar: function () {
                     this.crear();
-
-                },
-                formNuevo: function () {
-                    this.dialog = true;
-                    this.operacion = 'crear';
-                    this.articulo.descripcion = '';
-                    this.articulo.precio = '';
-                    this.articulo.stock = '';
-                },
-                formEditar: function (id, descripcion, precio, stock) {
-                    this.articulo.id = id;
-                    this.articulo.descripcion = descripcion;
-                    this.articulo.precio = precio;
-                    this.articulo.stock = stock;
-                    this.dialog = true;
-                    this.operacion = 'editar';
                 }
             }
         });
+
     </script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
 
 </body>
-
 </html>
