Avances pagina Recetas
Creación de vista de Inicio que lleve al login y registro correspondiente. Limpieza de código y corrección de errores al momento de registrarse.

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         <div class="  collapse navbar-collapse  " id="navbarNav">
           <ul class="navbar-nav text">
             <li class="nav-item ">
-              <a class="nav-link text-white" id="boton" href="recetas.html">Recetas</a>
+              <a class="nav-link text-white" id="boton" href="html/Inicio.html">Recetas</a>
             </li>
           </ul>
           <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
