--- a/public/html/login.html
+++ b/public/html/login.html
@@ -86,6 +86,7 @@
         </div>
     </nav>
     <!-- CONTENIDO DE LA PÁGINA -->
+    
     <section>
         <div class="container col-sm-8 mx-auto">
             <div class="row align-items-center">
@@ -103,6 +104,7 @@
                             <div id="app">
                                 <app>
                                     <main>
+                                        <!-- FORM -->
                                         <form class="p-4">
                                             <div class="input-group mb-3">
                                                 <input v-model="usuarios.nombre" type="text" class="form-control"
@@ -136,11 +138,12 @@
                                                     onclick="mostrarPassword()"> <span
                                                         class="fa fa-eye-slash icon"></span> </button> -->
                                                 <span id="show_password" type="button" onclick="mostrarPassword()"
-                                                    class="fa fa-eye-slash icon input-group-text" style="background-color: transparent; border-left: none;"></span>
+                                                    class="fa fa-eye-slash icon input-group-text"
+                                                    style="background-color: transparent; border-left: none;"></span>
 
                                             </div>
                                             <div style="text-align: center;" class="py-2">
-                                                <a @click="guardar()" type="submit" class="button-inicio">Prueba</a>
+                                                <a @click="guardar()" type="submit" class="button-inicio" >Prueba</a>
                                             </div>
                                             <!-- <a href="Inicio.html" type="button" class="btn btn-outline-dark">hola</a> -->
                                         </form>
@@ -161,7 +164,6 @@
             </div>
         </div>
     </section>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
