--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,10 @@
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
   <link rel="shortcut icon" href="img/letra-p.png" />
-  <link rel="stylesheet" href="css/style.css">
+  <link id="estilos" rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
   <style>
     .juegos {
       background-image: url('img/fondo.svg');
@@ -24,12 +27,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 
-<body>
-  <!-- NAVBAR -->
-  <div id="root">
-    <nav class="navbar navbar-expand-lg sticky-top" id="contenido" style="background-color: #484554;">
-      <div class=" container">
-        <a class="navbar-brand text-white" href="/">
+<body id="ind">
+  <!-- NAVBAR  -->
+  <div>
+    <nav class="navbar navbar-expand-lg sticky-top" id="contenido">
+      <div class="container">
+        <a class="navbar-brand" id="nav-titulo" style="color: white;" href="/">
           <img src="img/portafolio.png" alt="Bootstrap" width="35" height="35"> Portafolio
         </a>
         <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -39,13 +42,13 @@
         <div class="  collapse navbar-collapse  " id="navbarNav">
           <ul class="navbar-nav text">
             <li class="nav-item ">
-              <a class="nav-link text-white" id="boton" href="html/Inicio-recetas.html">Recetas</a>
+              <a class="nav-link" style="color: white;" id="nav-recetas" href="/recetas">Recetas</a>
             </li>
           </ul>
           <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
           </ul>
           <button class="btn-cssbuttons">
-            
+
             <span>Sobre mi</span><span>
               <svg height="18" width="18" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 1024 1024"
                 class="icon">
@@ -95,7 +98,10 @@
     <!-- FIN DEL NAVBAR -->
 
     <!-- CONTENIDO DE LA PÁGINA -->
-    <section>
+    <div id="root">
+
+    </div>
+    <!-- <section>
       <div style="background-color: #484554;">
         <div class="container col-sm-8 py-5 mx-auto">
           <div class="row align-items-center py-2">
@@ -124,14 +130,85 @@
         </div>
       </div>
 
-    </section>
+    </section> -->
+
+
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
+    <script>
+      let url = 'http://localhost:3000/api/usuarios/';
+      new Vue({
+          el: '#app',
+          vuetify: new Vuetify(),
+          data() {
+              return {
+                  usuario: [],
+                  dialog: false,
+                  operacion: '',
+                  usuarios: {
+                      correo: '',
+                      nombre: '',
+                      apellido: '',
+                      correo: '',
+                      contrasena: ''
+                  }
+              }
+          },
+          created() {
+              this.mostrar()
+          },
+          methods: {
+              //MÉTODOS PARA EL CRUD
+              mostrar: function () {
+                  axios.get(url)
+                      .then(response => {
+                          this.usuario = response.data;
+                      })
+              },
+              buscar: function () {
+                  // let correo = { correo: this.usuarios.correo }
+                  axios.get(url + this.usuarios.correo)
+                      .then(response => {
 
+                          if (response.data.message === "Usuario disponible") {
+                              alert("Usuario registrado exitosamente")
+                              this.crear();
+                          } else if (response.data.message === "Usuario no disponible") {
+                              alert("El usuario ya existe!")
+                          } else {
+                              alert("Algo salió mal!")
+                          }
 
+                      })
+              },
+              crear: function () {
+                  let parametros = { correo: this.usuarios.correo, nombre: this.usuarios.nombre, apellido: this.usuarios.apellido, usuario: this.usuarios.usuario, contrasena: this.usuarios.contrasena };
+                  axios.post(url, parametros)
+                      .then((response) => {
+                          this.mostrar();
+                      })
+
+                  this.usuarios.correo = "";
+                  this.usuarios.nombre = "";
+                  this.usuarios.apellido = "";
+                  this.usuarios.usuario = "";
+                  this.usuarios.contrasena = "";
+              },
+
+              //Botones y formularios
+              guardar: function () {
+                  this.buscar();
+              }
+          }
+      });
+
+  </script>
 </body>
 
 </html>
