--- a/public/index.html
+++ b/public/index.html
@@ -13,26 +13,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
   <link rel="shortcut icon" href="img/letra-p.png" />
   <link id="estilos" rel="stylesheet" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
-  <style>
-    .juegos {
-      background-image: url('img/fondo.svg');
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      background-size: cover;
-    }
-  </style>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
 </head>
 
-<body id="ind">
+<body id="ind" >
   <!-- NAVBAR  -->
   <div>
-    <nav class="navbar navbar-expand-lg sticky-top" id="contenido">
+    <nav class="navbar navbar-expand-lg sticky-top" id="contenido" style="background-color: #484554;">
       <div class="container">
-        <a class="navbar-brand" id="nav-titulo" style="color: white;" href="/">
+        <a class="navbar-brand" id="nav-titulo" style="color: white;" href="http://localhost:3001/#home">
           <img src="img/portafolio.png" alt="Bootstrap" width="35" height="35"> Portafolio
         </a>
         <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -42,7 +30,10 @@
         <div class="  collapse navbar-collapse  " id="navbarNav">
           <ul class="navbar-nav text">
             <li class="nav-item ">
-              <a class="nav-link" style="color: white;" id="nav-recetas" href="/recetas">Recetas</a>
+              <a class="nav-link" style="color: white;" id="nav-recetas" href="#sobreMi">Sobre mi</a>
+            </li>
+            <li class="nav-item ">
+              <a class="nav-link" style="color: white;" id="nav-recetas" href="#recetas">Mis proyectos</a>
             </li>
           </ul>
           <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
@@ -140,8 +131,8 @@
     crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap" rel="stylesheet">
-  
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
+
 </body>
 
 </html>
