--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-  <link rel="shortcut icon" href="./img/letra-p.png" />
+  <link rel="icon" href="./img/letra-p.png" />
   <link id="estilos" rel="stylesheet" href="css/style.css">
 </head>
 
@@ -20,8 +20,8 @@
   <div>
     <nav class="navbar navbar-expand-lg sticky-top" id="contenido" style="background-color: #484554;">
       <div class="container">
-        <a class="navbar-brand" id="nav-titulo" style="color: white;" href="http://localhost:3001/#home">
-          <img src="./img/portafolio.png" alt="Bootstrap" width="35" height="35"> Portafolio
+        <a class="navbar-brand" id="nav-titulo" style="color: white;" href="/#home">
+          <img src="./img/portafolio.png" width="35" height="35"> Portafolio
         </a>
         <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
