--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg sticky-top" id="contenido" style="background-color: #484554;">
       <div class="container">
         <a class="navbar-brand" id="nav-titulo" style="color: white;" href="/#home">
-          <img src="./img/portafolio.png" width="35" height="35"> Portafolio
+          <img src="https://github.com/GnesisVSS/portafolio-personal/blob/main/public/img/portafolio.png" width="35" height="35"> Portafolio
         </a>
         <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
