prueba imagen portafolio

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg sticky-top" id="contenido" style="background-color: #484554;">
       <div class="container">
         <a class="navbar-brand" id="nav-titulo" style="color: white;" href="/#home">
-          <img src="https://raw.githubusercontent.com/GnesisVSS/portafolio-personal/main/public/img/portafolio.png?token=GHSAT0AAAAAAB53B55N7NM6HNO356WD5XI2Y7NIGFA" width="35" height="35"> Portafolio
+          <img src={portafolio} width="35" height="35"> Portafolio
         </a>
         <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -100,7 +100,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
-
+  <script>
+    import portafolio from './img/portafolio.png'
+  </script>
 </body>
 
 </html>
