--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,25 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-  <link rel="icon" href="https://raw.githubusercontent.com/GnesisVSS/portafolio-personal/main/public/img/letra-p.png?token=GHSAT0AAAAAAB53B55MRI2UEPC5D5TEK3SGY7NH2FQ" />
+  <link rel="icon"
+    href="https://raw.githubusercontent.com/GnesisVSS/portafolio-personal/main/public/img/letra-p.png?token=GHSAT0AAAAAAB53B55MRI2UEPC5D5TEK3SGY7NH2FQ" />
   <link id="estilos" rel="stylesheet" href="css/style.css">
+  
 </head>
 
-<body id="ind" >
+<body id="ind">
   <!-- NAVBAR  -->
+  <script>
+    import portafolio from './img/portafolio.png'
+    let d = new Date();
+    document.body.innerHTML = "<h1>Time right now is:  " + d.getHours() + ":" + d.getMinutes() + ":" + d.getSeconds()
+    "</h1>"
+  </script>
   <div>
     <nav class="navbar navbar-expand-lg sticky-top" id="contenido" style="background-color: #484554;">
       <div class="container">
         <a class="navbar-brand" id="nav-titulo" style="color: white;" href="/#home">
-          <img src={portafolio} width="35" height="35"> Portafolio
+          <img src="img/portafolio.png" width="35" height="35"> Portafolio
         </a>
         <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -81,7 +89,7 @@
                   </svg></a>
               </li>
             </ul>
-            
+
           </button>
         </div>
       </div>
@@ -89,6 +97,7 @@
     <!-- FIN DEL NAVBAR -->
 
     <!-- CONTENIDO DE LA PÁGINA -->
+    
     <div id="root">
 
     </div>
@@ -100,9 +109,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
-  <script>
-    import portafolio from './img/portafolio.png'
-  </script>
+
 </body>
 
 </html>
