Prueba imagen portafolio 1

--- a/public/index.html
+++ b/public/index.html
@@ -14,22 +14,22 @@
   <link rel="icon"
     href="https://raw.githubusercontent.com/GnesisVSS/portafolio-personal/main/public/img/letra-p.png?token=GHSAT0AAAAAAB53B55MRI2UEPC5D5TEK3SGY7NH2FQ" />
   <link id="estilos" rel="stylesheet" href="css/style.css">
-  
+
 </head>
 
 <body id="ind">
   <!-- NAVBAR  -->
-  <script>
-    import portafolio from './img/portafolio.png'
-    let d = new Date();
-    document.body.innerHTML = "<h1>Time right now is:  " + d.getHours() + ":" + d.getMinutes() + ":" + d.getSeconds()
-    "</h1>"
-  </script>
   <div>
     <nav class="navbar navbar-expand-lg sticky-top" id="contenido" style="background-color: #484554;">
       <div class="container">
         <a class="navbar-brand" id="nav-titulo" style="color: white;" href="/#home">
-          <img src="img/portafolio.png" width="35" height="35"> Portafolio
+          <img id="port" width="35" height="35"> Portafolio
+          <!-- <div id="port" width="35" height="35">
+
+          </div> -->
+          <!-- <nav id="port">
+
+          </nav> -->
         </a>
         <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,7 +97,7 @@
     <!-- FIN DEL NAVBAR -->
 
     <!-- CONTENIDO DE LA PÁGINA -->
-    
+
     <div id="root">
 
     </div>
@@ -109,7 +109,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
-
+  <!-- <link rel="preconnect" href="imagenes.js"> -->
+  <script src="imagenes.js"></script>
 </body>
 
 </html>
