Prueba imagen portafolio 2

--- a/public/index.html
+++ b/public/index.html
@@ -110,7 +110,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
   <!-- <link rel="preconnect" href="imagenes.js"> -->
-  <script src="imagenes.js"></script>
+  <script>
+    const img = document.querySelector("#port");
+    img.src = "/img/portafolio.png";
+  </script>
 </body>
 
 </html>
