--- a/public/index.html
+++ b/public/index.html
@@ -109,7 +109,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
-  
+  <!-- <link rel="preconnect" href="imagenes.js"> -->
+  <script>
+    const img = document.querySelector("#port");
+    img.src = "/public/img/portafolio.png";
+  </script>
 </body>
 
 </html>
