--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@
   <!-- <link rel="preconnect" href="imagenes.js"> -->
   <script>
     const img = document.querySelector("#port");
-    img.src = "/public/img/portafolio.png";
+    img.src = "/img/portafolio.png";
   </script>
 </body>
 
