Correcion archivos de imagen

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg sticky-top" id="contenido" style="background-color: #484554;">
       <div class="container">
         <a class="navbar-brand" id="nav-titulo" style="color: white;" href="/#home">
-          <img id="port" width="35" height="35"> Portafolio
+          <img src="img/portafolio.png" id="port" width="35" height="35"> Portafolio
           <!-- <div id="port" width="35" height="35">
 
           </div> -->
@@ -109,11 +109,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
-  <!-- <link rel="preconnect" href="imagenes.js"> -->
-  <script>
-    const img = document.querySelector("#port");
-    img.src = "/img/portafolio.png";
-  </script>
+  
 </body>
 
 </html>
