--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
   <link rel="icon"
-    href="https://raw.githubusercontent.com/GnesisVSS/portafolio-personal/main/public/img/letra-p.png?token=GHSAT0AAAAAAB53B55MRI2UEPC5D5TEK3SGY7NH2FQ" />
+    href="img/letra-p.png" />
   <link id="estilos" rel="stylesheet" href="css/style.css">
 
 </head>
