--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,10 @@
         <div class="  collapse navbar-collapse  " id="navbarNav">
           <ul class="navbar-nav text">
             <li class="nav-item ">
-              <a class="nav-link" style="color: white;" id="nav-recetas" href="#sobreMi">Sobre mi</a>
+              <a class="nav-link" style="color: white;" id="nav-recetas" href="/#sobreMi">Sobre mi</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" style="color: white;" id="nav-recetas" href="#recetas">Mis proyectos</a>
+              <a class="nav-link" style="color: white;" id="nav-recetas" href="/#recetas">Mis proyectos</a>
             </li>
           </ul>
           <ul class="navbar-nav flex-row flex-wrap ms-md-auto">
