--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
           </ul>
           <button class="btn-cssbuttons">
 
-            <span>Sobre mi</span><span>
+            <span>Contactame!</span><span>
               <svg height="18" width="18" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 1024 1024"
                 class="icon">
                 <path fill="white"
