--- a/public/index.html
+++ b/public/index.html
@@ -11,22 +11,37 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-  <link rel="icon"
-    href="img/letra-p.png" />
+  <link rel="icon" href="img/letra-p.png" />
   <link id="estilos" rel="stylesheet" href="css/style.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
 </head>
 
 <body id="root">
-    
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
   
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      var fps = new FullPageScroll('wrap', {
+        mediaQuery: 'screen and (min-width: 800px)',
+        goToTopOnLast: false
+      });
+      fps.onslide = function (e) {
+        console.log("Slide " + (e.target.currentSlide + 1) + " of " + e.target.slides.length);
+      }
+      document.querySelectorAll('a.top').forEach(function (el) {
+        el.addEventListener('click', function (event) {
+          event.preventDefault();
+          fps.goToFirstSlide();
+        });
+      });
+    });
+  </script>
 </body>
 
 </html>
